# 8080emulator

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: cpu.h  instruction.h
src/: cpu.c  instruction.c  main.c
